# tooling-trusted-releases

./: .gitignore  .pre-commit-config.yaml  .pre-commit-heavy.yaml  Alpha-signup.md  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  Makefile  NOTICE  README.md  SUPPORT.md  docker-compose.yml  pyproject.toml  start-atr.sh  start-dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/linters/: .markdown-lint.yml
.github/workflows/: analyze.yml  build.yml  codeql.yaml  pr-labeler.yml
atr/: attestable.py  config.py  constants.py  construct.py  form.py  jwtoken.py  principal.py  server.py  ssh.py  tabulate.py  tarzip.py  util.py  worker.py
atr/admin/: __init__.py
atr/admin/templates/: delete-release.html  ldap-lookup.html
atr/api/: __init__.py
atr/blueprints/: admin.py  get.py  post.py
atr/datasources/: apache.py
atr/db/: __init__.py  interaction.py
atr/docs/: build-processes.md  code-conventions.html  code-conventions.md  components.md  database.md  how-to-contribute.md  index.md  running-and-creating-tests.md  running-the-server.html  running-the-server.md  signing-artifacts.md  storage-interface.md  user-guide.md  user-interface.md
atr/get/: announce.py  checks.py  distribution.py  draft.py  file.py  finish.py  manual.py  projects.py  report.py  root.py  sbom.py  start.py  upload.py  voting.py
atr/models/: api.py  attestable.py  checkdata.py  helpers.py  results.py  sql.py
atr/policy/: third-party-licenses.md
atr/post/: distribution.py  draft.py  finish.py  projects.py  revisions.py  tokens.py  upload.py
atr/sbom/: cli.py  conformance.py  licenses.py  osv.py  utilities.py
atr/sbom/models/: bom.py  conformance.py  licenses.py  osv.py
atr/shared/: __init__.py  distribution.py  draft.py  projects.py  tokens.py  upload.py
atr/static/css/: atr.css
atr/static/js/: committee-directory.js  ongoing-tasks-poll.js
atr/static/js/src/: admin-update-form.js  clipboard-copy.js  committee-directory.js  copy-variable.js  ongoing-tasks-poll.js  projects-add-form.js  projects-directory.js  vote-preview.js
atr/storage/: __init__.py
atr/storage/writers/: __init__.py  announce.py  distributions.py  policy.py  project.py  release.py  revision.py  sbom.py  vote.py  workflowstatus.py
atr/tasks/: __init__.py  gha.py  metadata.py  sbom.py
atr/tasks/checks/: __init__.py  license.py  rat.py
atr/templates/: check-selected-path-table.html  check-selected-release-info.html  check-selected.html  committee-directory.html  delete-committee-keys.html  draft-tools.html  projects.html  report-selected-path.html
atr/templates/includes/: footer.html  sidebar.html  topnav.html
atr/templates/layouts/: base.html
bootstrap/context/: .npmrc  Dockerfile  build.sh  bump.sh
bootstrap/source/: custom.scss  reboot-shim.scss
migrations/versions/: 0032_2025.12.30_bb1b64a3.py  0034_2025.12.31_ac4dcf44.py  0035_2026.01.08_2bbfd636.py  0037_2026.01.13_0cefcaea.py
notes/: api-security.md  development.md  for-prospective-contributors.md  plan.md  test-user-flows.md
playwright/: test.py
scripts/: README.md  docs_check.py  fix_order.py  fix_order.sh
tests/: Dockerfile.e2e  docker-compose.yml
tests/e2e/announce/: conftest.py
tests/e2e/committees/: conftest.py  test_get.py
tests/e2e/compose/: conftest.py
tests/e2e/report/: conftest.py  test_get.py
tests/e2e/sbom/: conftest.py  test_post.py
tests/e2e/vote/: conftest.py
tests/e2e/voting/: conftest.py  test_get.py
tests/unit/: test_checks_rat.py
